# VNtyper

./: .dockerignore  .gitignore  1000G.py  ADTKD.py  AI_REVIEW_ACTION_ITEMS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_MODERNIZATION_PLAN.md  DOCKER_TEST_RESULTS.md  IKC_output_R1.fastq.gz_16375701357254558174.ikc  LICENSE  MANIFEST.in  Makefile  README.md  REFACTORING_SUMMARY.md  Singularity_install.sh  TEST_DATA_ISSUES.md  VNtyper.py  VNtyper_1.1.0.py  VNtyper_1.2.0.py  VNtyper_1.2.1.py  conda.txt  install_prerequisites .sh  install_prerequisites.sh  mkdocs.yml  pyproject.toml  pytest.ini  setup.py  tool.py
.github/workflows/: ci-tests.yml  docker-build.yml  docs.yml  publish-pypi.yml
Files/: MUC1-VNTR.fa  MUC1-VNTR.fa.fai  MUC1-VNTR.fai  MUC1_motifs_Rev_com.fa  MUC_hg19.bed  code-adVNTR_RUs.fa
Scripts/: adVNTR.def  advntr_genotyping.py  arg_parser.py  fastq_bam_processing.py  kestrel_genotyping.py  utils.py  vntyper_pipeline.py
conda/: conda.txt  environment_envadvntr.yml  environment_shark.yml  environment_vntyper.yml
docker/: .dockerignore  Dockerfile  Dockerfile.local  README.md  TESTING.md  container_config.json  docker-compose.yml  docker-compose.yml.backup  entrypoint.sh  test_docker.py  test_docker.sh
docker/app/: __init__.py  celery_app.py  celery_worker.py  config.py  main.py  tasks.py  utils.py  version.py
docker/docker_test/: __init__.py  config.py  container.py
docs/: hooks.py  index.md
docs/about/: changelog.md  citation.md  contributing.md  faq.md  index.md  license.md  scientific-background.md
docs/cli/: cohort.md  index.md  install-references.md  online.md  pipeline.md  report.md
docs/getting-started/: index.md  installation.md  quickstart.md  reference-setup.md
docs/overrides/: main.html
docs/pipeline/: flagging.md  index.md  input-processing.md  kestrel.md  optional-modules.md  reports.md  scoring-and-confidence.md
docs/user-guide/: cohort-analysis.md  configuration.md  docker.md  index.md  input-formats.md  online-mode.md  output-files.md  reference-assemblies.md  running-pipeline.md  snakemake.md
example/: 1000G_2504_high_coverage.csv
example/example_1/: example_1_Final_result.tsv
example/example_2/: example_2_Final_result.tsv
example/example_3/: example_3_Final_result.tsv
example/example_4/: example_4_Final_result.tsv
example/example_5/: example_5_Final_result.tsv
reference/: All_Pairwise_and_Self_Merged_MUC1_motifs_filtered.fa  All_Pairwise_and_Self_Merged_MUC1_motifs_filtered.fa.fai  MUC1-VNTR.fa.fai  MUC1_motifs_Rev_com.fa  MUC1_motifs_Rev_com.fa.fai  README.md  code-adVNTR_RUs.fa  code-adVNTR_RUs.fa.fai  filter_config.json  generate_vntr_reference.py  md5_checksums.txt  muc1_region_hg19.fa  muc1_region_hg19.fa.fai  pseudonymize.py  pseudonymize_config.json
scripts/: adVNTR.def  download_test_data.py
snakemake/: run_vntyper2.sh  vntyper2.smk
testing/: run_all_tests.sh
tests/: TESTING_GUIDE.md  conftest.py  helpers.py  parametrization.py  test_data_config.json  test_data_utils.py  test_orchestration.py
tests/1000G/: 1000G.py
tests/benchmark/: README.md  benchamrk_downsample.py  benchmark_vntyper.py  downsample_bam.py  plot_vntyper_summary.py
tests/docker/: conftest.py  test_docker_pipeline.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_alignment_processing.py  test_bcftools_optional.py  test_chromosome_utils.py  test_confidence_assignment.py  test_flagging.py  test_grch_support.py  test_haplo_count_and_selection.py  test_install_references.py  test_motif_filtering_issue_136.py  test_reference_registry.py  test_region_utils.py  test_scoring.py  test_utils.py  test_variant_parsing.py
vntyper/: __init__.py  cli.py  config.json  version.py
vntyper/dependencies/: README.md
vntyper/modules/: __init__.py
vntyper/scripts/: README.md  __init__.py  advntr_genotyping.py  alignment_processing.py  chromosome_utils.py  cohort_summary.py  confidence_assignment.py  cross_match.py  extract_unmapped_from_offset.py  fastq_bam_processing.py  file_processing.py  flagging.py  generate_report.py  install_references.py  install_references_config.json  kestrel_config.json  kestrel_filter_config.json  kestrel_genotyping.py  pipeline.py  (+9 more)
(+26 files in other folders)
